switching to Star Wars APIs

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     <main>
         <!-- API Selection -->
         <section class="api-selector" id="apiSelector">
-            <div class="api-card active" data-api="countries">
-                <h3><span class="api-icon">🌍</span> Countries API</h3>
-                <p>Query countries, continents, and languages</p>
+            <div class="api-card active" data-api="characters">
+                <h3><span class="api-icon">🧑</span> Characters</h3>
+                <p>Luke, Vader, and everyone in between</p>
             </div>
-            <div class="api-card" data-api="rickmorty">
-                <h3><span class="api-icon">👽</span> Rick & Morty API</h3>
-                <p>Characters, episodes, and locations</p>
+            <div class="api-card" data-api="films">
+                <h3><span class="api-icon">🎬</span> Films</h3>
+                <p>Episodes, directors, and opening crawls</p>
             </div>
-            <div class="api-card" data-api="spacex">
-                <h3><span class="api-icon">🚀</span> SpaceX API</h3>
-                <p>Launches, rockets, and missions</p>
+            <div class="api-card" data-api="starships">
+                <h3><span class="api-icon">🚀</span> Starships & Planets</h3>
+                <p>Vehicles, species, and worlds</p>
             </div>
         </section>
 
@@ -154,9 +154,8 @@
     <footer>
         <p>Built with vanilla JavaScript to demonstrate GraphQL fundamentals</p>
         <p style="margin-top: 0.5rem;">
-            APIs: <a href="https://countries.trevorblades.com" target="_blank">Countries</a> •
-            <a href="https://rickandmortyapi.com" target="_blank">Rick & Morty</a> •
-            <a href="https://api.spacex.land/graphql" target="_blank">SpaceX</a>
+            API: <a href="https://swapi-graphql.netlify.app" target="_blank">SWAPI GraphQL</a> •
+            Data from <a href="https://swapi.dev" target="_blank">The Star Wars API</a>
         </p>
     </footer>
 
