--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     <main>
         <!-- API Selection -->
         <section class="api-selector" id="apiSelector">
-            <div class="api-card active" data-api="characters">
-                <h3><span class="api-icon">🧑</span> Characters</h3>
-                <p>Luke, Vader, and everyone in between</p>
+            <div class="api-card active" data-api="rickmorty">
+                <h3><span class="api-icon">👽</span> Rick & Morty</h3>
+                <p>Characters, episodes, and dimensions</p>
             </div>
-            <div class="api-card" data-api="films">
-                <h3><span class="api-icon">🎬</span> Films</h3>
-                <p>Episodes, directors, and opening crawls</p>
+            <div class="api-card" data-api="countries">
+                <h3><span class="api-icon">🌍</span> Countries</h3>
+                <p>Nations, continents, and languages</p>
             </div>
-            <div class="api-card" data-api="starships">
-                <h3><span class="api-icon">🚀</span> Starships & Planets</h3>
-                <p>Vehicles, species, and worlds</p>
+            <div class="api-card" data-api="anime">
+                <h3><span class="api-icon">🎌</span> AniList</h3>
+                <p>Anime, manga, and characters</p>
             </div>
         </section>
 
@@ -154,8 +154,9 @@
     <footer>
         <p>Built with vanilla JavaScript to demonstrate GraphQL fundamentals</p>
         <p style="margin-top: 0.5rem;">
-            API: <a href="https://swapi-graphql.netlify.app" target="_blank">SWAPI GraphQL</a> •
-            Data from <a href="https://swapi.dev" target="_blank">The Star Wars API</a>
+            APIs: <a href="https://rickandmortyapi.com" target="_blank">Rick & Morty</a> •
+            <a href="https://countries.trevorblades.com" target="_blank">Countries</a> •
+            <a href="https://anilist.co" target="_blank">AniList</a>
         </p>
     </footer>
 
